# GLPJ

./: CMakeLists.txt  Opengl.sln  README.md  config.h.in
Debug/: Opengl.ilk
Opengl/: Ball.cpp  Ball.h  Camera.cpp  Camera.h  Opengl.vcxproj  Opengl.vcxproj.filters  Quad.cpp  Quad.h  SceneObj.h  SkyBox.cpp  TextRender.cpp  TextRender.h  element.cpp  element.h  entrance.cpp  shader.cpp  shader.h  terrain.cpp  terrain.h
Opengl/Debug/: vc140.idb
Opengl/Debug/Opengl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Opengl.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Opengl/Release/Opengl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Opengl.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: Opengl.iobj  Opengl.ipdb
render/: CMakeLists.txt
render/include/: Ball.h  Camera.h  Quad.h  SceneObj.h  SkyBox.h  TextRender.h  element.h  shader.h  terrain.h
render/src/: Ball.cpp  Camera.cpp  Quad.cpp  SceneObj.cpp  SkyBox.cpp  TextRender.cpp  entrance.cpp  shader.cpp  terrain.cpp
resources/: b_v_shader.txt  q_f_shader.txt  q_v_shader.txt  sr_f_shader.txt  sr_v_shader.txt
src/: b_f_shader.txt  b_v_shader.txt  q_f_shader.txt  q_v_shader.txt  sky_f_shader.txt  sky_v_shader.txt  t_f_shader.txt  t_v_shader.txt
third_part/libs/: glfw3.lib
